--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 [dependencies]
 rand = "0.7.3"
 hdrhistogram = "6.0"
-tui = "0.10"
-termion = "1.5"
+tui = { version = "0.10", features = ["crossterm"]}
+crossterm = "0.17"
 rayon = "1.3.1"
 num_cpus = "1.13.0"
